--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 <head>
   <title>what3emojis</title>
+  <style>
+    body {
+      font-size: 400%;
+      text-align: center;
+    }
+    p {
+      margin-top: 3em;
+    }
+  </style>
 </head>
 <body>
 <p>👋🌎❗</p>
