Add initial files for a map

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <title>what3emojis</title>
   <style>
     body {
-      font-size: 400%;
       text-align: center;
     }
-    p {
+    p:first-child {
+      font-size: 400%;
       margin-top: 3em;
     }
   </style>
 </head>
 <body>
 <p>👋🌎❗</p>
+<p><a href='/map'>explore map</a></p>
 </body>
 </html>
