--- a/map/index.html
+++ b/map/index.html
@@ -38,7 +38,7 @@
     var accessToken = 'pk.eyJ1IjoibG91IiwiYSI6IkJDYlg3REEifQ.9BLp9eUdT11kUy1jgujSsQ';
     var map = L.map('map').setView([40.7259, -73.9805], 12);
     L.tileLayer('https://api.mapbox.com/v4/lou.n26nngnj/{z}/{x}/{y}.png?access_token=' + accessToken, {
-      attribution: '© <a href="https://www.mapbox.com/about/maps/">Mapbox</a> © <a href="https://www.openstreetmap.org/">OpenStreetMap</a>'
+      attribution: 'Map imagery © <a href="https://www.mapbox.com/about/maps/">Mapbox</a> © <a href="https://www.openstreetmap.org/">OpenStreetMap</a>, Emoji by <a href="http://emojione.com/">Emoji One</a>'
     }).addTo(map);
 
     var hash = new L.Hash(map);
