--- a/map/index.html
+++ b/map/index.html
@@ -28,20 +28,24 @@
     </ul>
   </header>
   <div id='pin'>
-    <div id='emojis'>👒🍱🐉</div>
+    <div id='emojis'><!-- JS puts emoji here --></div>
   </div>
   <div id='map'></div>
   <script src='../js/leaflet-hash.js'></script>
   <script src='../js/geolocator.js'></script>
   <script>
     // Create a basic Leaflet map
-    var accessToken = 'pk.eyJ1IjoibG91IiwiYSI6IkJDYlg3REEifQ.9BLp9eUdT11kUy1jgujSsQ';
-    var map = L.map('map').setView([51.4700, 0.2592], 12);
-    L.tileLayer('https://api.mapbox.com/v4/lou.n26nngnj/{z}/{x}/{y}.png?access_token=' + accessToken, {
+    var accessToken = 'pk.eyJ1IjoibG91IiwiYSI6IkJDYlg3REEifQ.9BLp9eUdT11kUy1jgujSsQ'
+    var map = L.map('map').setView([51.4700, 0.2592], 12)
+    var tileUrl = 'https://api.mapbox.com/v4/lou.n26nngnj/{z}/{x}/{y}.png'
+    if (window.devicePixelRatio >= 2) {
+      tileUrl = 'https://api.mapbox.com/v4/lou.n26nngnj/{z}/{x}/{y}@2x.png'
+    }
+    L.tileLayer(tileUrl + '?access_token=' + accessToken, {
       attribution: 'Map imagery © <a href="https://www.mapbox.com/about/maps/">Mapbox</a> © <a href="https://www.openstreetmap.org/">OpenStreetMap</a>, Emoji by <a href="http://emojione.com/">Emoji One</a>'
-    }).addTo(map);
+    }).addTo(map)
 
-    var hash = new L.Hash(map);
+    var hash = new L.Hash(map)
 
     // Add Pelias geocoding plugin
     L.control.geocoder({
