--- a/map/index.html
+++ b/map/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <meta charset='utf-8'>
+  <meta http-equiv='x-ua-compatible' content='ie=edge'>
   <title>what3emojis 🌍🚀📡 explore the map</title>
+  <meta name='description' content='The best way to address the world using humanity’s only common, unambiguous language'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
 
   <script src='../js/geohash.js'></script>
 
