Set up actual legit asset build process

--- a/index.html
+++ b/index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html class='no-js' lang='en'>
 <head>
+  <meta charset='utf-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <title>what3emojis</title>
-  <style>
-    body {
-      text-align: center;
-    }
-    p:first-child {
-      font-size: 400%;
-      margin-top: 3em;
-    }
-  </style>
+  <link rel='stylesheet' href='css/styles.css'>
+  <script src='js/main.js'></script>
 </head>
 <body>
-<p>👋🌎❗</p>
-<p><a href='/map'>explore map</a></p>
+  <p>👋🌎❗</p>
+  <p><a href='/map'>explore map</a></p>
 </body>
 </html>
