--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <title>what3emojis</title>
   <link rel='stylesheet' href='css/styles.css'>
-  <script src='js/main.js'></script>
+  <script src='js/main.min.js'></script>
 </head>
 <body>
   <p>👋🌎❗</p>
