--- a/map/index.html
+++ b/map/index.html
@@ -7,18 +7,9 @@
   <meta name='description' content='The best way to address the world using humanity’s only common, unambiguous language'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
 
-  <script src='../js/geohash.js'></script>
-
-  <script src='//cdn.jsdelivr.net/emojione/1.5.0/lib/js/emojione.min.js'></script>
   <link rel='stylesheet' href='//cdn.jsdelivr.net/emojione/1.5.0/assets/css/emojione.min.css'>
-
-  <!-- Load Leaflet from CDN -->
   <link rel='stylesheet' href='//cdn.leafletjs.com/leaflet-1.0.0-b1/leaflet.css'>
-  <script src='//cdn.leafletjs.com/leaflet-1.0.0-b1/leaflet.js'></script>
-
-  <!-- Load Pelias geocoding plugin after Leaflet -->
   <link rel='stylesheet' href='../css/pelias-leaflet-geocoder.css'>
-  <script src='../js/pelias-leaflet-geocoder.js'></script>
   <link rel='stylesheet' href='../css/map.css'>
 </head>
 <body>
@@ -34,46 +25,7 @@
     <div id='emojis'><!-- JS puts emoji here --></div>
   </div>
   <div id='map'></div>
-  <script src='../js/leaflet-hash.js'></script>
   <script src='../js/geolocator.js'></script>
-  <script>
-    // Create a basic Leaflet map
-    var accessToken = 'pk.eyJ1IjoibG91IiwiYSI6IkJDYlg3REEifQ.9BLp9eUdT11kUy1jgujSsQ'
-    var map = L.map('map').setView([51.4700, 0.2592], 12)
-    var tileUrl = 'https://api.mapbox.com/v4/lou.n26nngnj/{z}/{x}/{y}.png'
-    if (window.devicePixelRatio >= 2) {
-      tileUrl = 'https://api.mapbox.com/v4/lou.n26nngnj/{z}/{x}/{y}@2x.png'
-    }
-    L.tileLayer(tileUrl + '?access_token=' + accessToken, {
-      attribution: 'Map imagery © <a href="https://www.mapbox.com/about/maps/">Mapbox</a> © <a href="https://www.openstreetmap.org/">OpenStreetMap</a>, Emoji by <a href="http://emojione.com/">Emoji One</a>'
-    }).addTo(map)
-
-    var hash = new L.Hash(map)
-
-    // Add Pelias geocoding plugin
-    L.control.geocoder({
-      drop_pin: false,
-      point_icon: '../css/img/point_icon.png',
-      polygon_icon: '../css/img/polygon_icon.png',
-      full_width: false, // Handle this ourselves.
-    }).addTo(map);
-
-    map.on('moveend', getEmoji)
-
-    getEmoji()
-
-    if (document.getElementById('map').className.indexOf('leaflet-touch') > 0) {
-      document.body.className += ' leaflet-touch'
-    }
-
-    function getEmoji () {
-      var center = map.getCenter()
-      var lat = center.lat
-      var lng = center.lng
-      var emoji = coordAt(lat, lng)
-      var output = emojione.unicodeToImage(emoji)
-      document.getElementById('emojis').innerHTML = output
-    }
-  </script>
+  <script src='../js/map.min.js'></script>
 </body>
 </html>
