Migrate styles to SCSS pipeline

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>what3emojis</title>
   <link rel='stylesheet' href='/css/styles.css'>
 </head>
-<body>
+<body class='main'>
 
   <nav class='navbar navbar-default navbar-inverse'>
     <div class='container-fluid'>
@@ -17,7 +17,7 @@
           <span class='icon-bar'></span>
           <span class='icon-bar'></span>
         </button>
-        <a class='navbar-brand' href='#'>what3emojis<span class='beta'>beta</span></a>
+        <a class='navbar-brand' href='/'>what3emojis<span class='beta'>beta</span></a>
       </div>
       <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
         <ul class='nav navbar-nav navbar-right'>
