--- a/map/index.html
+++ b/map/index.html
@@ -9,12 +9,10 @@
 
   <link rel='stylesheet' href='//cdn.jsdelivr.net/emojione/1.5.0/assets/css/emojione.min.css'>
   <link rel='stylesheet' href='//cdn.leafletjs.com/leaflet-1.0.0-b1/leaflet.css'>
-  <link rel='stylesheet' href='../css/pelias-leaflet-geocoder.css'>
-  <link rel='stylesheet' href='../css/map.css'>
 
   <link rel='stylesheet' href='/css/styles.css'>
 </head>
-<body>
+<body class='map'>
 
   <nav class='navbar navbar-default navbar-inverse'>
     <div class='container-fluid'>
@@ -25,7 +23,7 @@
           <span class='icon-bar'></span>
           <span class='icon-bar'></span>
         </button>
-        <a class='navbar-brand' href='#'>what3emojis<span class='beta'>beta</span></a>
+        <a class='navbar-brand' href='/'>what3emojis<span class='beta'>beta</span></a>
       </div>
       <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
         <ul class='nav navbar-nav navbar-right'>
