Run `make website`

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html class='no-js' lang='en'>
 <head>
   <meta charset='utf-8'>
-  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <meta http-equiv='x-ua-compatible' content='ie=edge'>
   <title>what3emojis</title>
+  <meta name='description' content='The best way to address the world using humanity’s only common, unambiguous language'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+
   <link rel='stylesheet' href='/css/styles.css'>
 </head>
 <body class='main'>
@@ -23,18 +26,155 @@
         <ul class='nav navbar-nav navbar-right'>
           <li><a href='/'>About</a></li>
           <li><a href='https://github.com/louh/what3emojis/'>GitHub</a></li>
-          <li class='login'><a href='/login'>Login</a></li>
+          <li class='map'><a href='/map'>Explore map</a></li>
+          <li class='login'><a href='/login'>Custom emoji</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <div class='container'>
-    <div class='row'>
-      <div class='col-md-12'>
-        <p>👋🌎❗</p>
-        <p><a href='/map'>explore map</a></p>
+  <main class='jumbotron' id='content' role='main'>
+    <div class='container'>
+
+      <p class='lead'>A radical new way to address any location in the world, using humanity’s only common unambiguous language.</p>
+
+      <p class='lead'>🙌🌍💫</p>
+
+      <div class='jumbotron-button'>
+        <a href='/map' class='explore-map-button'>Explore map (beta)</a>
       </div>
+
+      <div class='jumbotron-photo-credit'>
+        <a href='https://www.flickr.com/photos/vonderauvisuals/'>Photo by Bob Vonderau</a>
+        <span class='cc'><a href='https://creativecommons.org/licenses/by-nc/2.0/'>Creative Commons</a></span>
+      </div>
+    </div>
+  </main>
+
+  <div class='featurette'>
+    <div class='container'>
+      <div class='intro'>
+        <h2>👉 Why emoji? 👈</h2>
+
+        <p class='lead'>
+          Addresses are hard. Who can remember street addresses or latitude/longitude pairs? You could do much better with three totally random English words, but then there’s that pesky language barrier. No system is perfect, <em>except for emoji</em>.
+        </p>
+
+        <p class='lead'>🙋😸👲</p>
+      </div>
+
+      <hr>
+
+      <div class='row'>
+        <div class='col-sm-4 triptych'>
+          <img class='emojione' alt='😊' src='//cdn.jsdelivr.net/emojione/assets/svg/1F60A.svg?v=1.2.4'>
+          <h3>Easy to use</h3>
+          <p>
+             Emoji are easy to type, understand, and completely unambiguous in meaning with zero controversies. This makes it the ideal way to address arbitrary locations around the world.
+          </p>
+        </div>
+        <div class='col-sm-4 triptych'>
+          <img class='emojione' alt='🌌' src='//cdn.jsdelivr.net/emojione/assets/svg/1F30C.svg?v=1.2.4'>
+          <h3>Universally recognized</h3>
+          <p>
+            Emoji accurately represent all human thought and emotion. Nine out of ten experts predict that emoji will become the dominant, if not sole language of the entire human race by the year 2075.
+          </p>
+        </div>
+        <div class='col-sm-4 triptych'>
+          <img class='emojione' alt='🚀' src='//cdn.jsdelivr.net/emojione/assets/svg/1F680.svg?v=1.2.4'>
+          <h3>Future proof</h3>
+          <p>
+            The Unicode Consortium is constantly evaluating cultural trends for emoji candidates and adding millions of new emoji every year to fully index human communication.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class='featurette featurette-alt'>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-md-10 col-md-offset-1'>
+          <p class='triangles'><img class='emojione' alt='🔺' src='//cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4'><img class='emojione' alt='🔻' src='//cdn.jsdelivr.net/emojione/assets/png/1F53B.png?v=1.2.4'><img class='emojione' alt='🔺' src='//cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4'></p>
+          <p class='boom'><strong>what3emojis</strong> is a global <strong>Dymaxion grid</strong> of gazillions of <strong>4m<span class='x-mark'>×</span>4m triangles.</strong></p>
+          <p class='boom'>Each triangle has a 3-emoji address that will eventually be legally recognized by <strong>all local, state and federal governments everywhere</strong>.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class='featurette package-hero'>
+    <img src='/img/package.jpg' width='100%'>
+    <div class='overlay'>
+      <p class='lead'>Never lose a package again.</p>
+      <p>
+        Communicate a precise and unambiguous location to your friends, family and online retailers. With just three emoji, you can get packages delivered right to your doorstep and never accidentally to one of your neighbors!
+      </p>
+    </div>
+  </div>
+
+  <div class='featurette featurette-alt'>
+    <div class='container'>
+      <p class='quote boom'>
+        <span class='quote-mark'>“</span>
+        <span class='quote-text'>We are so 😍😍😍😍😍😍<wbr>😍😍😍😍😍😍😍😍😍😍😍😍😍<wbr>😍😍😍😍😍😍😍😍😍😍🐈</span>
+        <span class='quote-mark'>”</span>
+      </p>
+      <p class='quote-attribution'>― State of the Map US</p>
+    </div>
+  </div>
+
+  <div class='featurette'>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-md-10 col-md-offset-1'>
+          <p class='lead'><strong>What3Emojis is an OPEN open source project.</strong> It’s hosted, developed, and maintained on GitHub. Jump in and help us build the future of emoji-based world addressing.</p>
+          <a href='https://github.com/louh/what3emojis' class='btn btn-default btn-lg'>View project on GitHub</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer>
+    <div class='container'>
+      <div class='row'>
+        <div class='col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-3 col-md-offset-0'>
+          <h4>Explore</h4>
+
+          <ul>
+            <li><a href='/map'>Explore map</a></li>
+            <li><a href='/login'>Sign up</a></li>
+            <li><a href='/login'>Get custom emoji</a></li>
+            <li><a href='/map'>Examples</a></li>
+            <li><a href='/map'>Free trial</a></li>
+            <li><a href='/login'>Contact us</a></li>
+            <li><a href='https://github.com/louh/what3emojis/issues/'>Help</a></li>
+          </ul>
+        </div>
+        <div class='col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-3 col-md-offset-0'>
+          <h4>Develop</h4>
+
+          <ul>
+            <li><a href='https://github.com/louh/what3emojis'>Developer site</a></li>
+            <li><a href='https://github.com/louh/what3emojis'>API</a></li>
+            <li><a href='https://github.com/louh/what3emojis'>Documentation</a></li>
+            <li><a href='https://github.com/louh/what3emojis'>License</a></li>
+            <li><a href='https://github.com/louh/what3emojis'>Contribute</a></li>
+            <li><a href='https://github.com/louh/what3emojis/issues'>Report issues</a></li>
+          </ul>
+        </div>
+        <div class='col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0'>
+          <a class="twitter-timeline" href="https://twitter.com/search?q=what3emojis" data-widget-id="629995496183058436" height='200' data-chrome='noheader nofooter noborder transparent'>Tweets about what3emojis</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <div class='copyright'>
+    <div class='container'>
+      &copy; 2015 what3emojis
+      <span class='pull-right'>Made with 100% unobtainium.</span>
     </div>
   </div>
 
