--- a/map/index.html
+++ b/map/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html class='no-js' lang='en'>
 <head>
   <meta charset='utf-8'>
   <meta http-equiv='x-ua-compatible' content='ie=edge'>
   <title>what3emojis 🌍🚀📡 explore the map</title>
   <meta name='description' content='The best way to address the world using humanity’s only common, unambiguous language'>
-  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
   <link rel='stylesheet' href='//cdn.jsdelivr.net/emojione/1.5.0/assets/css/emojione.min.css'>
   <link rel='stylesheet' href='//cdn.leafletjs.com/leaflet-1.0.0-b1/leaflet.css'>
@@ -29,7 +29,7 @@
         <ul class='nav navbar-nav navbar-right'>
           <li><a href='/'>About</a></li>
           <li><a href='https://github.com/louh/what3emojis/'>GitHub</a></li>
-          <li class='login'><a href='/login'>Login</a></li>
+          <li class='login'><a href='/login'>Custom emoji</a></li>
         </ul>
       </div>
     </div>
