--- a/index.html
+++ b/index.html
@@ -106,19 +106,22 @@
   <div class='featurette package-hero'>
     <img src='/img/package.jpg' width='100%'>
     <div class='overlay'>
-      <p class='lead'>Never lose a package again.</p>
-      <p>
-        Communicate a precise and unambiguous location to your friends, family and online retailers. With just three emoji, you can get packages delivered right to your doorstep and never accidentally to one of your neighbors!
-      </p>
+      <div class='overlay-text'>
+        <p class='lead'>Never lose a package again.</p>
+        <p>
+          Communicate a precise and unambiguous location to your friends, family and online retailers. With just three emoji, you can get packages delivered right to your doorstep and never accidentally to one of your neighbors!
+        </p>
+        <a href='/map' class='btn btn-default btn-md'>Find your address</a>
+      </div>
     </div>
   </div>
 
   <div class='featurette featurette-alt'>
     <div class='container'>
       <p class='quote boom'>
-        <span class='quote-mark'>“</span>
-        <span class='quote-text'>We are so 😍😍😍😍😍😍<wbr>😍😍😍😍😍😍😍😍😍😍😍😍😍<wbr>😍😍😍😍😍😍😍😍😍😍🐈</span>
-        <span class='quote-mark'>”</span>
+        <span class='quote-text'>
+          <span class='keep-together'><span class='quote-mark'>“</span>We are</span> so 😍😍😍😍😍<wbr>&#8203;😍😍😍😍😍😍😍😍😍<wbr>&#8203;😍😍😍😍😍😍😍😍😍<wbr>&#8203;<span class='keep-together'>😍😍😍😍😍😍🐈<span class='quote-mark'>”</span></span>
+        </span>
       </p>
       <p class='quote-attribution'>― State of the Map US</p>
     </div>
