--- a/map/index.html
+++ b/map/index.html
@@ -7,8 +7,8 @@
   <meta name='description' content='The best way to address the world using humanity’s only common, unambiguous language'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
-  <link rel='stylesheet' href='//cdn.jsdelivr.net/emojione/1.5.0/assets/css/emojione.min.css'>
-  <link rel='stylesheet' href='//cdn.leafletjs.com/leaflet-1.0.0-b1/leaflet.css'>
+  <link rel='stylesheet' href='https://cdn.jsdelivr.net/emojione/1.5.0/assets/css/emojione.min.css'>
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css'>
 
   <link rel='stylesheet' href='/css/styles.css'>
 </head>
