--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
 
       <div class='row'>
         <div class='col-sm-4 triptych'>
-          <img class='emojione' alt='😊' src='//cdn.jsdelivr.net/emojione/assets/svg/1F60A.svg?v=1.2.4'>
+          <img class='emojione' alt='😊' src='https://cdn.jsdelivr.net/emojione/assets/svg/1F60A.svg?v=1.2.4'>
           <h3>Easy to use</h3>
           <p>
              Emoji are easy to type, understand, and completely unambiguous in meaning with zero controversies. This makes it the ideal way to address arbitrary locations around the world.
           </p>
         </div>
         <div class='col-sm-4 triptych'>
-          <img class='emojione' alt='🌌' src='//cdn.jsdelivr.net/emojione/assets/svg/1F30C.svg?v=1.2.4'>
+          <img class='emojione' alt='🌌' src='https://cdn.jsdelivr.net/emojione/assets/svg/1F30C.svg?v=1.2.4'>
           <h3>Universally recognized</h3>
           <p>
             Emoji accurately represent all human thought and emotion. Nine out of ten experts predict that emoji will become the dominant, if not sole language of the entire human race by the year 2075.
           </p>
         </div>
         <div class='col-sm-4 triptych'>
-          <img class='emojione' alt='🚀' src='//cdn.jsdelivr.net/emojione/assets/svg/1F680.svg?v=1.2.4'>
+          <img class='emojione' alt='🚀' src='https://cdn.jsdelivr.net/emojione/assets/svg/1F680.svg?v=1.2.4'>
           <h3>Future proof</h3>
           <p>
             The Unicode Consortium is constantly evaluating cultural trends for emoji candidates and adding millions of new emoji every year to fully index human communication.
@@ -95,7 +95,7 @@
     <div class='container'>
       <div class='row'>
         <div class='col-md-10 col-md-offset-1'>
-          <p class='triangles'><img class='emojione' alt='🔺' src='//cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4'><img class='emojione' alt='🔻' src='//cdn.jsdelivr.net/emojione/assets/png/1F53B.png?v=1.2.4'><img class='emojione' alt='🔺' src='//cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4'></p>
+          <p class='triangles'><img class='emojione' alt='🔺' src='https://cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4'><img class='emojione' alt='🔻' src='https://cdn.jsdelivr.net/emojione/assets/png/1F53B.png?v=1.2.4'><img class='emojione' alt='🔺' src='https://cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4'></p>
           <p class='boom'><strong>what3emojis</strong> is a global <strong>Dymaxion grid</strong> of gazillions of <strong>4m<span class='x-mark'>×</span>4m triangles.</strong></p>
           <p class='boom'>Each triangle has a 3-emoji address that will eventually be legally recognized by <strong>all local, state and federal governments everywhere</strong>.</p>
         </div>
