map is web-app-capable for iphone

--- a/map/index.html
+++ b/map/index.html
@@ -6,6 +6,8 @@
   <title>what3emojis 🌍🚀📡 explore the map</title>
   <meta name='description' content='The best way to address the world using humanity’s only common, unambiguous language'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <meta name='apple-mobile-web-app-capable' content='yes'>
+  <meta name='mobile-web-app-capable' content='yes'>
 
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/emojione/1.5.0/assets/css/emojione.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css'>
