--- a/login/index.html
+++ b/login/index.html
@@ -11,25 +11,19 @@
 </head>
 <body class='main login'>
 
-  <nav class='navbar navbar-default navbar-inverse'>
-    <div class='container-fluid'>
-      <div class='navbar-header'>
-        <button type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1' aria-expanded='false'>
-          <span class='sr-only'>Toggle navigation</span>
-          <span class='icon-bar'></span>
-          <span class='icon-bar'></span>
-          <span class='icon-bar'></span>
-        </button>
-        <a class='navbar-brand' href='/'>what3emojis<span class='beta'>beta</span></a>
-      </div>
-      <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
-        <ul class='nav navbar-nav navbar-right'>
-          <li><a href='/'>About</a></li>
-          <li><a href='https://github.com/louh/what3emojis/'>GitHub</a></li>
-          <li class='map'><a href='/map'>Explore map</a></li>
-          <li class='login'><a href='/login'>Custom emoji</a></li>
-        </ul>
-      </div>
+  <nav class='navbar navbar-dark bg-primary'>
+    <button type='button' class='navbar-toggler hidden-sm-up' data-toggle='collapse' data-target='#navbar-collapse' aria-expanded='false'>
+      <span class='sr-only'>Toggle navigation</span>
+      &#9776;
+    </button>
+    <div class='collapse navbar-toggleable-xs' id='navbar-collapse'>
+      <a class='navbar-brand' href='/'>what3emojis<span class='beta'>beta</span></a>
+      <ul class='nav navbar-nav pull-xs-right'>
+        <li class='nav-item'><a class='nav-link' href='/'>About</a></li>
+        <li class='nav-item'><a class='nav-link' href='https://github.com/louh/what3emojis/'>GitHub</a></li>
+        <li class='nav-item map'><a class='nav-link' href='/map'>Explore map</a></li>
+        <li class='nav-item login'><a class='nav-link' href='/login'>Custom emoji</a></li>
+      </ul>
     </div>
   </nav>
 
@@ -51,7 +45,7 @@
 <form action="//what3emojis.us11.list-manage.com/subscribe/post?u=e3772956b9ce888f8d71e152f&amp;id=cbd07007dd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll" class="input-group">
       <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
-      <span class="input-group-btn"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default"></span>
+      <span class="input-group-btn"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-primary"></span>
     </div>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;"><input type="text" name="b_e3772956b9ce888f8d71e152f_cbd07007dd" tabindex="-1" value=""></div>
@@ -110,7 +104,7 @@
   <div class='copyright'>
     <div class='container'>
       &copy; 2016 what3emojis
-      <span class='pull-right'>Made with 100% unobtainium.</span>
+      <span class='pull-xs-right'>Made with 100% unobtainium.</span>
     </div>
   </div>
 
