--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body class='main'>
 
   <nav class='navbar navbar-dark bg-primary'>
-    <button type='button' class='navbar-toggler hidden-sm-up' data-toggle='collapse' data-target='#navbar-collapse' aria-expanded='false'>
+    <button type='button' class='navbar-toggler hidden-sm-up pull-xs-right' data-toggle='collapse' data-target='#navbar-collapse' aria-expanded='false'>
       <span class='sr-only'>Toggle navigation</span>
       &#9776;
     </button>
+    <a class='navbar-brand' href='/'>what3emojis<span class='beta'>beta</span></a>
     <div class='collapse navbar-toggleable-xs' id='navbar-collapse'>
-      <a class='navbar-brand' href='/'>what3emojis<span class='beta'>beta</span></a>
       <ul class='nav navbar-nav pull-xs-right'>
         <li class='nav-item'><a class='nav-link' href='/'>About</a></li>
         <li class='nav-item'><a class='nav-link' href='https://github.com/louh/what3emojis/'>GitHub</a></li>
