--- a/map/index.html
+++ b/map/index.html
@@ -11,7 +11,7 @@
 
   <link rel='stylesheet' href='https://cdn.jsdelivr.net/emojione/1.5.0/assets/css/emojione.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css'>
-
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
   <link rel='stylesheet' href='/css/styles.css'>
 </head>
 <body class='map'>
