Update bootstrap 4 styling

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <main class='jumbotron' id='content' role='main'>
     <div class='container'>
 
-      <p class='lead'>A radical new way to address any location in the world, using humanity’s only common unambiguous language.</p>
+      <p class='lead'>A radical new way to address any location in the world, using humanity’s only common unambiguous&nbsp;language.</p>
 
       <p class='lead'>🙌🌍💫</p>
 
@@ -60,21 +60,21 @@
       <hr>
 
       <div class='row'>
-        <div class='col-sm-4 triptych'>
+        <div class='col-md-4 triptych'>
           <img class='emojione' alt='😊' src='https://cdn.jsdelivr.net/emojione/assets/svg/1F60A.svg?v=1.2.4'>
           <h3>Easy to use</h3>
           <p>
              Emoji are easy to type, understand, and completely unambiguous in meaning with zero controversies. This makes it the ideal way to address arbitrary locations around the world.
           </p>
         </div>
-        <div class='col-sm-4 triptych'>
+        <div class='col-md-4 triptych'>
           <img class='emojione' alt='🌌' src='https://cdn.jsdelivr.net/emojione/assets/svg/1F30C.svg?v=1.2.4'>
           <h3>Universally recognized</h3>
           <p>
             Emoji accurately represent all human thought and emotion. Nine out of ten experts predict that emoji will become the dominant, if not sole language of the entire human race by the year 2075.
           </p>
         </div>
-        <div class='col-sm-4 triptych'>
+        <div class='col-md-4 triptych'>
           <img class='emojione' alt='🚀' src='https://cdn.jsdelivr.net/emojione/assets/svg/1F680.svg?v=1.2.4'>
           <h3>Future proof</h3>
           <p>
@@ -90,8 +90,8 @@
       <div class='row'>
         <div class='col-md-10 col-md-offset-1'>
           <p class='triangles'><img class='emojione' alt='🔺' src='https://cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4'><img class='emojione' alt='🔻' src='https://cdn.jsdelivr.net/emojione/assets/png/1F53B.png?v=1.2.4'><img class='emojione' alt='🔺' src='https://cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4'></p>
-          <p class='boom'><strong>what3emojis</strong> is a global <strong>Dymaxion grid</strong> of gazillions of <strong>4m<span class='x-mark'>×</span>4m triangles.</strong></p>
-          <p class='boom'>Each triangle has a 3-emoji address that will eventually be legally recognized by <strong>all local, state and federal governments everywhere</strong>.</p>
+          <p class='boom'><strong>what3emojis</strong> is a global <strong>Dymaxion grid</strong> of gazillions of <strong>4m<span class='x-mark'>×</span>4m&nbsp;triangles.</strong></p>
+          <p class='boom'>Each triangle has a 3-emoji address that will eventually be legally recognized by <strong>all local, state and federal governments&nbsp;everywhere.</strong></p>
         </div>
       </div>
     </div>
