--- a/login/index.html
+++ b/login/index.html
@@ -30,10 +30,10 @@
   <main class='jumbotron' id='content' role='main'>
     <div class='container'>
 
-      <p class='lead'>Get a custom emoji address of any length for only $24.99*. Sign up for the waitlist today and be the first on your block to know when can finally be the coolest person on your block.</p>
+      <p class='lead'>Get a custom emoji address of any length for only $24.99*. Sign up for the waitlist today and be the first on your block to know when can finally be the coolest person on your&nbsp;block.</p>
 
       <div class='row'>
-        <div class='subscribe col-md-6 col-md-offset-3'>
+        <div class='subscribe col-lg-6 col-lg-offset-3'>
       <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
