--- a/src/index.html
+++ b/src/index.html
@@ -175,8 +175,7 @@
     </div>
   </div>
 
-  <!-- <script src="/js/main.min.js"></script> -->
-  <script src="./index.js"></script>
+  <script src="./scripts/main.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
