libsass deprecates css imports

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="The best way to address the world using humanity’s only common, unambiguous language">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <link rel="stylesheet" href="../node_modules/leaflet-geocoder-mapzen/dist/leaflet-geocoder-mapzen.css">
   <link rel="stylesheet" href="./styles/styles.scss">
 </head>
 <body class="main">
