--- a/src/map/index.html
+++ b/src/map/index.html
@@ -16,12 +16,14 @@
 </head>
 <body class="map">
 
-  <nav class="navbar navbar-dark bg-primary">
+  <nav class="navbar">
     <button type="button" class="navbar-toggler hidden-sm-up pull-xs-right" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
       <span class="sr-only">Toggle navigation</span>
       &#9776;
     </button>
-    <a class="navbar-brand" href="/">what3emojis<span class="beta">beta</span></a>
+    <a class="navbar-brand" href="/">
+      <img src="../images/logo.svg" alt="What3Emojis" />
+    </a>
     <div class="collapse navbar-toggleable-xs" id="navbar-collapse">
       <ul class="nav navbar-nav pull-xs-right">
         <li class="nav-item"><a class="nav-link" href="/">About</a></li>
