--- a/src/login/index.html
+++ b/src/login/index.html
@@ -11,18 +11,27 @@
 </head>
 <body class="main login">
 
-  <nav class="navbar navbar-dark bg-primary">
-    <button type="button" class="navbar-toggler hidden-sm-up pull-xs-right" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false">
-      <span class="sr-only">Toggle navigation</span>
-      &#9776;
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">what3emojis</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="/">what3emojis<span class="beta">beta</span></a>
-    <div class="collapse navbar-toggleable-xs" id="navbar-collapse">
-      <ul class="nav navbar-nav pull-xs-right">
-        <li class="nav-item"><a class="nav-link" href="/">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="https://github.com/louh/what3emojis/">GitHub</a></li>
-        <li class="nav-item map"><a class="nav-link" href="/map">Explore map</a></li>
-        <li class="nav-item login"><a class="nav-link" href="/login">Custom emoji</a></li>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="/">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/what3emojis/what3emojis/">Code</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/map">Explore map</a>
+        </li>
       </ul>
     </div>
   </nav>
