Update column offsets for Bootstrap v4

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
   <div class="featurette featurette-alt">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 offset-md-1">
           <p class="triangles"><img class="emojione" alt="🔺" src="https://cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4"><img class="emojione" alt="🔻" src="https://cdn.jsdelivr.net/emojione/assets/png/1F53B.png?v=1.2.4"><img class="emojione" alt="🔺" src="https://cdn.jsdelivr.net/emojione/assets/png/1F53A.png?v=1.2.4"></p>
           <p class="boom"><strong>what3emojis</strong> is a global <strong>Dymaxion grid</strong> of gazillions of <strong>4m<span class="x-mark">×</span>4m&nbsp;triangles.</strong></p>
           <p class="boom">Each triangle has a 3-emoji address that will eventually be legally recognized by <strong>all local, state and federal governments&nbsp;everywhere.</strong></p>
@@ -134,7 +134,7 @@
   <div class="featurette">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 offset-md-1">
           <p class="lead"><strong>What3Emojis is an OPEN open source project.</strong> It’s hosted, developed, and maintained on GitHub. Jump in and help us build the future of emoji-based world addressing.</p>
           <a href="https://github.com/louh/what3emojis" class="btn btn-primary btn-lg">View project on GitHub</a>
         </div>
@@ -145,7 +145,7 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-3 col-md-offset-0">
+        <div class="col-xs-10 offset-xs-1 col-sm-5 offset-sm-1 col-md-3 offset-md-0">
           <h4>Explore</h4>
 
           <ul>
@@ -158,7 +158,7 @@
             <li><a href="https://github.com/louh/what3emojis/issues/">Help</a></li>
           </ul>
         </div>
-        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-3 col-md-offset-0">
+        <div class="col-xs-10 offset-xs-1 col-sm-5 offset-sm-1 col-md-3 offset-md-0">
           <h4>Develop</h4>
 
           <ul>
@@ -170,7 +170,7 @@
             <li><a href="https://github.com/louh/what3emojis/issues">Report issues</a></li>
           </ul>
         </div>
-        <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0">
+        <div class="col-xs-10 offset-xs-1 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
           <a class="twitter-timeline" href="https://twitter.com/search?q=what3emojis" data-widget-id="629995496183058436" height="200" data-chrome="noheader nofooter noborder transparent">Tweets about what3emojis</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
