--- a/src/login/index.html
+++ b/src/login/index.html
@@ -42,7 +42,7 @@
       <p class="lead">Get a custom emoji address of any length for only $24.99*. Sign up for the waitlist today and be the first on your block to know when can finally be the coolest person on your&nbsp;block.</p>
 
       <div class="row">
-        <div class="subscribe col-lg-6 col-lg-offset-3">
+        <div class="subscribe col-lg-6 offset-lg-3">
       <!-- Begin MailChimp Signup Form -->
 <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
 <style type="text/css">
@@ -77,7 +77,7 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-3 col-md-offset-0">
+        <div class="col-xs-10 offset-xs-1 col-sm-5 offset-sm-1 col-md-3 offset-md-0">
           <h4>Explore</h4>
 
           <ul>
@@ -90,7 +90,7 @@
             <li><a href="https://github.com/louh/what3emojis/issues/">Help</a></li>
           </ul>
         </div>
-        <div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1 col-md-3 col-md-offset-0">
+        <div class="col-xs-10 offset-xs-1 col-sm-5 offset-sm-1 col-md-3 offset-md-0">
           <h4>Develop</h4>
 
           <ul>
@@ -102,7 +102,7 @@
             <li><a href="https://github.com/louh/what3emojis/issues">Report issues</a></li>
           </ul>
         </div>
-        <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0">
+        <div class="col-xs-10 offset-xs-1 col-sm-10 offset-sm-1 col-md-6 offset-md-0">
           <a class="twitter-timeline" href="https://twitter.com/search?q=what3emojis" data-widget-id="629995496183058436" height='200' data-chrome='noheader nofooter noborder transparent'>Tweets about what3emojis</a>
           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         </div>
