--- a/src/map/index.html
+++ b/src/map/index.html
@@ -10,8 +10,9 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/emojione/1.5.0/assets/css/emojione.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.0-beta.2/leaflet.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.4/leaflet.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../node_modules/leaflet-geocoder-mapzen/dist/leaflet-geocoder-mapzen.css">
   <link rel="stylesheet" href="../styles/styles.scss">
 </head>
 <body class="map">
