--- a/src/login/index.html
+++ b/src/login/index.html
@@ -6,7 +6,8 @@
   <title>what3emojis</title>
   <meta name="description" content="The best way to address the world using humanity’s only common, unambiguous language">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
   <link rel="stylesheet" href="../styles/styles.scss">
 </head>
 <body class="main login">
