Remove beta button

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
       <p class="lead">🙌🌍💫</p>
 
       <div class="jumbotron-button">
-        <a href="/map" class="explore-map-button">Explore map (beta)</a>
+        <a href="/map" class="explore-map-button">Explore map</a>
       </div>
 
       <div class="jumbotron-photo-credit">
