--- a/src/map/index.html
+++ b/src/map/index.html
@@ -52,8 +52,8 @@
   </div>
   <div id="map"></div>
 
-  <script src="../scripts/main.js"></script>
-  <script src="../scripts/map.js"></script>
+  <script type="module" src="../scripts/main.js"></script>
+  <script type="module" src="../scripts/map.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
